// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render MenuItemForm correctly 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Restaurant name"
      type="text"
      value=""
    />
    <input
      onChange={[Function]}
      placeholder="Menu Item name"
      type="text"
      value=""
    />
    <input
      onChange={[Function]}
      placeholder="Calories"
      type="number"
      value=""
    />
    <input
      onChange={[Function]}
      placeholder="Protein"
      type="number"
      value=""
    />
    <input
      onChange={[Function]}
      placeholder="Fat"
      type="number"
      value=""
    />
    <input
      onChange={[Function]}
      placeholder="Carbs"
      type="number"
      value=""
    />
    <button>
      Add Menu Item
    </button>
  </form>
</div>
`;

exports[`should render MenuItemForm correctly with menuItems 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Restaurant name"
      type="text"
      value="Wendys"
    />
    <input
      onChange={[Function]}
      placeholder="Menu Item name"
      type="text"
      value="chilli - small"
    />
    <input
      onChange={[Function]}
      placeholder="Calories"
      type="number"
      value={300}
    />
    <input
      onChange={[Function]}
      placeholder="Protein"
      type="number"
      value={30}
    />
    <input
      onChange={[Function]}
      placeholder="Fat"
      type="number"
      value={15}
    />
    <input
      onChange={[Function]}
      placeholder="Carbs"
      type="number"
      value={3}
    />
    <button>
      Add Menu Item
    </button>
  </form>
</div>
`;

exports[`should render error for invalid form submission 1`] = `
<div>
  <p>
    You are missing a field
  </p>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Restaurant name"
      type="text"
      value=""
    />
    <input
      onChange={[Function]}
      placeholder="Menu Item name"
      type="text"
      value=""
    />
    <input
      onChange={[Function]}
      placeholder="Calories"
      type="number"
      value=""
    />
    <input
      onChange={[Function]}
      placeholder="Protein"
      type="number"
      value=""
    />
    <input
      onChange={[Function]}
      placeholder="Fat"
      type="number"
      value=""
    />
    <input
      onChange={[Function]}
      placeholder="Carbs"
      type="number"
      value=""
    />
    <button>
      Add Menu Item
    </button>
  </form>
</div>
`;
